--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MCP Locations</string>
+    <string name="select_a_csv_file">Select a csv file to continue</string>
+    <string name="select_file">Select file</string>
 </resources>
