--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MCP Locations</string>
     <string name="select_a_csv_file">Select a csv file to continue</string>
     <string name="select_file">Select file</string>
+    <string name="enter_mcp_location_id">Enter MCP location ID</string>
+    <string name="search_mcp_location">Search MCP Location</string>
+    <string name="please_enter_a_location_id">Please enter a location ID</string>
 </resources>
